<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WI Sports Roster</string>
    <string name="packer_roster">Packers</string>
    <string name="brewer_roster">Brewers</string>
    <string name="bucks_roster">Bucks</string>
    
    <string name="age_label">Age: </string>
    <string name="weight_label">Weight: </string>
    <string name="height_label">Height: </string>
    <string name="college_label">College: </string>
    <string name="exp_label">Experience: </string>
    <string name="salary_label">Salary: </string>
    <string name="born_dt_label">Birth Date: </string>
    <string name="born_place_label">Birth Place: </string>
    <string name="season">Season: </string>
    
    <string name="get_all_warning">This may take a few minutes, continue?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="roster_label">Roster</string>
    <string name="refresh_roster">Refresh Current Roster</string>
    <string name="delete_roster">Delete Current Roster</string>
    <string name="get_all">Get All Data for Team</string>
    <string name="help_text">No data currently on the device.  Click on refresh in the menu.</string>
	<string name="details_btn">Refresh details</string>
	<string name="stats_btn">Refresh stats</string>
	<string name="NFL">NFL</string>
	<string name="MLB">MLB</string>
	<string name="NBA">NBA</string>
	<string name="menu_position">Group</string>
	<string name="menu_sort">Sort by></string>
	<string name="menu_number">Number</string>
	<string name="menu_name">Name</string>
	<string name="menu_all">All</string>
	<string name="menu_qb">QB</string>
	<string name="menu_rb">RB</string>
	<string name="menu_wr">WR</string>
	<string name="menu_te">TE</string>
	<string name="menu_ol">OL</string>
	<string name="menu_dl">DL</string>
	<string name="menu_lb">LB</string>
	<string name="menu_cb">CB</string>
	<string name="menu_s">S</string>
	<string name="menu_sp">Special</string>
	
	<string name="menu_mlb_sp">Pitcher</string>
	<string name="menu_mlb_c">Catcher</string>
	<string name="menu_mlb_1b">1st Base</string>
	<string name="menu_mlb_2b">2nd Base</string>
	<string name="menu_mlb_3b">3rd Base</string>
	<string name="menu_mlb_cf">Center</string>
	<string name="menu_mlb_lf">Left</string>
	<string name="menu_mlb_rf">Right</string>
	
	<string name="menu_nba_c">Center</string>
	<string name="menu_nba_pf">Power Forward</string>
	<string name="menu_nba_sf">Small Forward</string>
	<string name="menu_nba_sg">Shooting Guard</string>
	<string name="menu_nba_pg">Point Guard</string>
	
	<string name="switch_sports">Switch sports</string>
	
	<string name="undrafted">Undrafted</string>
	<string name="dtl_college_displ">College: </string>
	
	<string name="sport_pref_title">Current Sport</string>
	<string name="website_pref_title">NFL Website</string>
	<string name="website_mlb_pref_title">MLB Website</string>
	<string name="website_nba_pref_title">NBA Website</string>
	
	<string name="settings_title">Settings</string>
	
	<string name="header_number">#</string>
	<string name="header_name">Name</string>
	
	<string name="test">Test</string>
	
	<string name="website_nfl_pref_default">1,http://sports.yahoo.com/nfl/teams/gnb/roster/</string>
	<string name="website_mlb_pref_default">1,http://sports.yahoo.com/mlb/teams/mil/roster/</string>
	<string name="website_nba_pref_default">3,http://espn.go.com/nba/team/roster/_/name/mil/milwaukee-bucks</string>
	
	<string name="nfl_color">#224728</string>
	<string name="mlb_color">#12469B</string>
</resources>
